# ad-forge

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_users_and_api_keys.py
backend/app/: cli.py  config.py  main.py
backend/app/engine/: __init__.py  event_bus.py  job_worker.py  pipeline_engine.py
backend/app/integrations/: elevenlabs_client.py  fal_client.py  heygen_client.py  openai_client.py
backend/app/models/: __init__.py  base.py  brand.py  event.py  insight.py  job.py  output.py  user.py
backend/app/pipelines/: __init__.py  ad_copy.py  briefs.py  feedback_loop.py  landing_pages.py  static_ads.py  video_ugc.py
backend/app/routes/: auth.py  brands.py  deployment.py  jobs.py  outputs.py  performance.py
backend/app/seed/: __init__.py  glowvita.py
backend/tests/: conftest.py  test_auth.py  test_brands.py  test_briefs_pipeline.py  test_data_scoping.py  test_jobs.py  test_pipeline_engine.py
docs/plans/: 2026-03-08-adforge-poc-design.md  2026-03-09-verify-app-design.md  2026-03-09-verify-app-plan.md  2026-03-10-auth-design.md  2026-03-10-auth-plan.md  2026-03-10-demo-quality-fix-design.md  2026-03-10-demo-quality-fix.md  2026-03-10-frontend-redesign-design.md  2026-03-10-frontend-redesign-plan.md
frontend/: Dockerfile  components.json  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
(+33 files in other folders)
